gccida/g2/add_equal_note
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/add_equal_note/src/optabs.c:595:43: error: must use 'enum' tag to refer to type 'rtx_code'
int  add_equal_note( rtx seq, rtx target, rtx_code code, rtx op0, rtx op1) 
                                          ^
                                          enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/add_equal_note/src/optabs.c:634:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)i->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/add_equal_note/src/optabs.c:645:30: error: use of undeclared identifier 'machine_mode'
v19 = gen_rtx_fmt_e( code, ( machine_mode)*( ( unsigned __int8 *)target + 2), v20); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/add_equal_note/src/optabs.c:651:31: error: use of undeclared identifier 'machine_mode'
v19 = gen_rtx_fmt_ee( code, ( machine_mode)*( ( unsigned __int8 *)target + 2), v18, v17); 
                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/add_equal_note/src/obj/optabs.o] Error 1
